--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           </ul>
           <a href="#" id="subscribe-now-bt">Subscribe Now</a>
         </nav>
-        <div id="title-banner">
-          <h1>Running Club</h1>
+        <div id="bg">
+            <h1>Running Club</h1>
         </div>
       </header>
 
@@ -157,8 +157,8 @@
         <div id="map">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12150.375914333017!2d-3.7153382983842578!3d40.417844606380285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42287e9fd06215%3A0xd5e109ff23e3d0c1!2sCentro%2C%20Madrid!5e0!3m2!1sen!2ses!4v1602361002408!5m2!1sen!2ses"
-            width="800"
-            height="450"
+            width="100%"
+            height="100%"
             frameborder="0"
             style="border: 0"
             allowfullscreen=""
